Adding dbt project

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -13,3 +13,8 @@ snapshot-paths: ["snapshots"]
 clean-targets:
   - "target"
   - "dbt_packages"
+
+models:
+  dbt_hiive:
+    stg_customer_order_summary:
+      +enabled: false
